force-app/main/default/objects/Partner_Privacy_Policy_Master__c/Partner_Privacy_Policy_Master__c.object-meta.xml
<CustomObject>
    <label>Partner Privacy Policy Master</label>
    <nameField>
        <displayFormat>P-{YY}{MM}{DD}{000}</displayFormat>
        <label>T&amp;C Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Privacy Policy Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>