force-app/main/default/objects/Partner_Privacy_Policy_Master__c/fields/Apply_Date__c.field-meta.xml
<CustomField>
    <fullName>Apply_Date__c</fullName>
    <label>Apply Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>