force-app/main/default/objects/Partner_Privacy_Policy_Master__c/fields/T_C_Detail__c.field-meta.xml
<CustomField>
    <fullName>T_C_Detail__c</fullName>
    <label>T&amp;C Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>