force-app/main/default/objects/Partner_Privacy_Policy_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>T_C_Type__c</columns>
    <columns>Version__c</columns>
    <columns>Apply_Date__c</columns>
    <columns>T_C_Detail__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>